k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-mongo
spec:
  type: ClusterIP
  selector:
    component: mongo-client
    tool: admin-mongo
  ports:
    - port: 1234
      targetPort: 1234
