k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-mongo
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: admin-mongo.devspace.eks004.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-mongo
              servicePort: 1234
